--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2335,6 +2335,7 @@
 		text-align: center;
 		padding: 3em 0 0 0;
 		background-color: #fff;
+		background: url(images/psu1.jpg);
 		background-image: url("images/bg02.png"), url("images/bg02.png"), url("images/bg01.png");
 		background-position: top left,					top left,					top left;
 		background-size: 100% 6em,					100% 6em,					auto;
