--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -511,9 +511,9 @@ hr {
 }
 .heading-section p {
   color: #444444;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 300;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   margin-top: 10px;
 }
 
