--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -269,7 +269,7 @@ hr {
   width: 100%;
   margin: 0 auto;
   z-index: 1000;
-  top: 94px;
+  top: 30px;
   -webkit-transition: all 150ms ease-in-out;
   -moz-transition: all 150ms ease-in-out;
   transition: all 150ms ease-in-out;
@@ -321,7 +321,7 @@ hr {
   font-size: 14px;
   color: #444444;
   line-height: 100px;
-  padding-top: 37px;
+  padding-top: 50px;
 }
 .main-menu ul li.active a {
   border-top: 3px solid #ec523f;
@@ -363,19 +363,20 @@ hr {
 .flexslider {
   position: relative;
   top: -96px;
+  z-index: 1;
 }
 .flexslider .overlay {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 8;
+  z-index: 1;
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
 }
 .flexslider .slider-caption {
   position: absolute;
-  z-index: 9;
+  z-index: 2;
   width: 100%;
   text-align: center;
   top: 380px;
@@ -798,7 +799,7 @@ hr {
 }
 
 #footer {
-  margin-top: 130px;
+  margin-top: 30px;
 }
 
 /*
@@ -811,5 +812,9 @@ body, p, div, h1, h2, h3, h4, h5, h6 {
 /*
  * drop down menu
  */
+.drop{
+    position:relative;
+    z-index: 1000;
+}
 
 
